--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
-theme: jekyll-theme-minimal
-title: Henry's homepage
-description: Bookmark this to keep an eye on my project updates!
+title: Henry的项目列表
+description: 
+google_analytics: 
+show_downloads: true
+theme: jekyll-theme-modernist
+
+gems:
+  - jekyll-mentions
